--- a/client/templates/owners/owners_template.html
+++ b/client/templates/owners/owners_template.html
@@ -1,4 +1,5 @@
 <template name='owners'>
+  {{#with place}}
   {{#if isOwner}}
   <div class="ui main container">
     <h2 class="ui header">Propriétaires</h2>
@@ -27,4 +28,5 @@
     <a href="{{pathFor 'placeEdit' placeId=_id}}" class="left floated ui circular icon button"><i class="arrow left icon"></i></a>
   </div>
   {{/if}}
+  {{/with}}
 </template>
