--- a/client/templates/card/card_template.html
+++ b/client/templates/card/card_template.html
@@ -1,4 +1,5 @@
 <template name='card'>
+  {{#with card}}
   <div class="ui container">
     <div class="ui center aligned basic segment">
       <h1 class="ui header">
@@ -8,10 +9,10 @@
       {{#if imageId}}
         {{> image imageId=imageId classNames='small centered'}}<br>
       {{/if}}
-      {{#if isQrCode}}
+      {{#if isQrCode format}}
         {{> QrCode text=code classNames="large centered"}}
       {{else}}
-        <canvas class="ui image" id="barcode-canvas" width="300" height="100"></canvas>
+        <canvas id="barcodeCanvas" width="300" height="100"></canvas>
       {{/if}}
       <h5 class="ui header">{{code}}</h5>
       <p>
@@ -21,4 +22,5 @@
       <a href="{{pathFor 'editCard' cardId=_id}}" class="teal right floated ui circular icon button"><i class="pencil icon"></i></a>
     </div>
   </div>
+  {{/with}}
 </template>
