--- a/client/templates/cardBrand/cardBrand_template.html
+++ b/client/templates/cardBrand/cardBrand_template.html
@@ -1,29 +1,32 @@
 <template name='cardBrand'>
   {{#if isInRole 'allo'}}
-  {{#with cardBrand}}
     <div class="ui main container">
       <div class="ui basic segment">
-        {{#if imageId}}
-          {{> image imageId=imageId classNames='small right floated'}}
+        {{#if cardBrand.imageId}}
+          {{> image imageId=cardBrand.imageId classNames='small right floated'}}
         {{/if}}
-        {{#if _id}}
-        {{> imageEdit imageId=imageId}}
+        {{#if cardBrand._id}}
+        {{> imageEdit imageId=cardBrand.imageId}}
         {{/if}}
         <h3 class="ui header">
-          {{#if _id}}
-            Editer la marque de carte {{name}}
+          {{#if cardBrand._id}}
+            Editer la marque de carte {{cardBrand.name}}
           {{else}}
             Ajouter une marque de carte
           {{/if}}
         </h3>
-        {{#autoForm id="editCardBrand" type=type collection="CardsBrands" enctype="multipart/form-data" doc=this}}
+        {{#autoForm id="editCardBrand" type=type collection="CardsBrands" enctype="multipart/form-data" doc=cardBrand}}
           {{> afQuickField placeholder="schemaLabel" name="name" }}
           {{> afQuickField placeholder="schemaLabel" name="baseline" }}
           <button class="fluid ui positive button" type="submit">Enregistrer</button>
+          <br>
           <a class="fluid ui button" href="{{pathFor 'cardsBrands'}}">Annuler</a>
         {{/autoForm}}
+        {{#if cardBrand._id}}
+          <br>
+          <button class="fluid ui negative button deleteCardBrand" >Supprimer</button>
+        {{/if}}
       </div>
     </div>
-  {{/with}}
   {{/if}}
 </template>
