--- a/client/templates/editCard/editCard_template.html
+++ b/client/templates/editCard/editCard_template.html
@@ -16,8 +16,11 @@
       {{> afQuickField placeholder="schemaLabel" name="points"}}
       {{> afQuickField placeholder="schemaLabel" name="notes"}}
       <button class="fluid ui positive button" type="submit">Enregistrer</button>
+      <br>
       <a class="fluid ui button" href="{{pathFor 'loyaltyCards'}}">Annuler</a>
     {{/autoForm}}
+    <br>
+    <button class="fluid ui negative button deleteCard" >Supprimer</button>
   </div>
   {{/with}}
 </template>
