--- a/client/templates/editProfile/editProfile_template.html
+++ b/client/templates/editProfile/editProfile_template.html
@@ -16,6 +16,8 @@
           <input type="email" placeholder="Adresse email" name="email" id="email" value="{{contactEmail user}}">
         </div>
         <button class="fluid ui positive button" type="submit">Enregistrer</button>
+        <br>
+        <a class="fluid ui button" href="{{pathFor 'profile'}}">Annuler</a>
       </form>
     </div>
   </div>
