--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -2,7 +2,7 @@
   <div class="ui container">
     <a href="{{pathFor 'addCard'}}" class="teal right floated ui circular icon button"><i class="add icon"></i></a>
     <h2>Mes cartes de fidélité</h2>
-    <div class="ui top fluid attached tabular menu" id="loyaltyTabs">
+    <div class="ui top attached tabular menu" id="loyaltyTabs">
       <a class="{{activeLoyaltyTab 'allofid'}} item loyaltyTabHead" data-tab="allofid">allofid</a>
       <a class="{{activeLoyaltyTab 'private'}} right item loyaltyTabHead" data-tab="private">personnelles</a>
     </div>
