--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -1,5 +1,5 @@
 <template name='header'>
-  <div class="ui top fixed menu borderless blue inverted">
+  <div class="ui top fixed menu borderless blue inverted alloblue">
     <div class="left item" data-action="sidebar">
       <i class="big sidebar icon"></i>
     </div>
