--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -5,7 +5,7 @@
       {{#if isSellerOrOwnerRole}}
         <h2 class="ui center aligned icon header">
           {{#if customerImageId}}
-            {{> image imageId=customerImageId classNames='tiny circular centered'}}
+            {{> image imageId=customerImageId classNames='tiny rounded centered'}}
           {{else}}
             <i class="blue user icon"></i>
           {{/if}}
