--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -27,7 +27,7 @@
           <h2 class="ui icon header">
             <i class="yellow star icon"></i>
             <div class="content">
-              Vous n'avez pas encore de cartes de fidélité
+              Vous n'avez pas encore de cartes de fidélité allofid
               <div class="sub header">Cherchez l'affiche <strong>allofid</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
             </div>
           </h2>
