--- a/client/templates/allo/allo_template.html
+++ b/client/templates/allo/allo_template.html
@@ -2,7 +2,9 @@
   {{#if isInRole 'allo'}}
     <div class="ui main container">
       <div class="ui raised center aligned segment">
-        <a class="ui button fluid teal" href="{{pathFor 'cardsBrands'}}">Gérez les marques de cartes</a>
+        <a class="ui button fluid teal" href="{{pathFor 'cardsBrands'}}">Gérer les marques de cartes</a>
+        <br>
+        <a class="ui button fluid blue alloblue" href="{{pathFor 'contacts'}}">Gérer les contacts</a>
       </div>
     </div>
   {{/if}}
