--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -1,17 +1,17 @@
 <template name='header'>
   <div class="ui top fixed menu borderless blue inverted alloblue">
     <div class="left item" data-action="sidebar">
-      <i class="big sidebar icon" data-intro="Cliquez ici pour voir le menu et toute les fonctions de l'application" data-step="2"></i>
+      <i class="big sidebar icon" data-intro="Cliquez ici pour voir le menu et toutes les fonctionalités de l'application" data-step="2"></i>
     </div>
     <div class="center header item" data-action="goHome">
       <h1 data-intro="Où que vous soyez, vous pouvez cliquer sur allofid pour revenir à l'accueil" data-step="1">allofid</h1>
     </div>
     {{#unless isConnected}}
-    <div class="right item" data-action="signIn">
+    <div class="right item" data-action="signIn" data-intro="Cliquez là pour afficher votre profil et vous faire scanner par les commerçants qui utilisent allofid" data-step="3">
       <i class="big user icon"></i>
     </div>
     {{else}}
-    <div class="right item" data-action="profile" data-intro="Cliquez là pour afficher et éditer votre profil" data-step="3">
+    <div class="right item" data-action="profile" data-intro="Cliquez là pour afficher votre profil et vous faire scanner par les commerçants qui utilisent allofid" data-step="3">
       {{#if currentUser.profile.imageId}}
         {{> image imageId=currentUser.profile.imageId classNames='avatar'}}
       {{else}}
