--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -11,7 +11,7 @@
         <br>
         <a class="ui button fluid blue" href="{{pathFor 'myPlaces'}}">Gérez vos commerces</a>
         <br>
-        <a class="ui button fluid" href="{{pathFor 'contact'}}">Besoin d'aide ?</a>
+        <a class="ui button fluid" href="{{pathFor 'contact'}}">Contacter allofid</a>
       </div>
     {{/if}}
     <form id="search">
@@ -22,7 +22,7 @@
     </form>
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
-        <i class="yellow star icon" data-action="loyaltyCards" data-intro="Cette étoile est un raccourci accéder à vos cartes de fidélité" data-step="4"></i>
+        <i class="yellow star icon" data-action="loyaltyCards" data-intro="Cette étoile est aussi un raccourci pour accéder à vos cartes de fidélité" data-step="4"></i>
         <div class="content">
           Gérez vos cartes de fidélité et vos avoirs
           <div class="sub header">{{baseline}}</div>
@@ -33,7 +33,7 @@
     {{#unless isInRole 'owners'}}
     <div class="ui raised center aligned segment">
       <h2 class="ui icon header">
-        <i class="blue ticket icon" data-action="vouchers" data-intro="Ce ticket est un raccourci accéder à vos avoirs" data-step="5"></i>
+        <i class="blue ticket icon" data-action="vouchers" data-intro="Ce ticket est aussi un raccourci pour accéder à vos avoirs" data-step="5"></i>
         <div class="content">
           Utilisez allofid pour votre commerce
           <div class="sub header">C'est gratuit pour toujours.</div>
