--- a/client/templates/vouchers/vouchers_template.html
+++ b/client/templates/vouchers/vouchers_template.html
@@ -1,5 +1,5 @@
 <template name='vouchers'>
-  <div class="ui container">
+  <div class="ui main container">
     <h2>Mes avoirs</h2>
     <div class="ui relaxed divided list">
       {{#each vouchers}}
