--- a/client/templates/allo/allo_template.html
+++ b/client/templates/allo/allo_template.html
@@ -4,7 +4,7 @@
       <div class="ui raised center aligned segment">
         <a class="ui button fluid teal" href="{{pathFor 'cardsBrands'}}">Gérer les marques de cartes</a>
         <br>
-        <a class="ui button fluid blue alloblue" href="{{pathFor 'contacts'}}">Gérer les contacts</a>
+        <a class="ui button fluid blue" href="{{pathFor 'contacts'}}">Gérer les contacts</a>
       </div>
     </div>
   {{/if}}
