--- a/client/templates/myPlaces/myPlaces_template.html
+++ b/client/templates/myPlaces/myPlaces_template.html
@@ -39,7 +39,7 @@
       <a href="{{pathFor 'createPlace'}}" class="ui fluid button">Ajouter un commerce</a>
     {{ else }}
     <div class="ui stacked center aligned segment">
-      <h3>Commerçants, utilisez allofid.</h3>
+      <h3>Commerçants, utilisez loyali.</h3>
       <p>
         C'est gratuit pour toujours.
       </p>
