--- a/client/templates/vouchers/vouchers_template.html
+++ b/client/templates/vouchers/vouchers_template.html
@@ -20,7 +20,7 @@
           <i class="blue ticket icon"></i>
           <div class="content">
             Vous n'avez pas encore d'avoirs
-            <div class="sub header">Cherchez l'affiche <strong>allofid</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
+            <div class="sub header">Cherchez l'affiche <strong>loyali</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
           </div>
         </h2>
       </div>
