--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -1,7 +1,7 @@
 <template name='about'>
   <div class="ui main container">
     <div class="ui basic segment">
-      <h2 class="ui header">A propos d'allofid</h2>
+      <h2 class="ui header">A propos de loyali</h2>
       <p class="ui justified text">
         C'est une application qui permet de gérer vos cartes de fidélité et vos avoirs.
       </p>
@@ -18,7 +18,7 @@
         <li>Voir le montant de vos avoirs cumulés chez les commerçants partenaires</li>
       </ul>
       <h4 class="ui center aligned header">
-        Avec allofid, fini le porte monnaie surchargé.
+        Avec loyali, fini le porte monnaie surchargé.
       </h4>
 
     </div>
@@ -26,7 +26,7 @@
       <h2 class="ui icon header">
         <i class="blue ticket icon"></i>
         <div class="content">
-          Cherchez les affiches <strong>allofid</strong> autour de vous
+          Cherchez les affiches <strong>loyali</strong> autour de vous
           <div class="sub header">ou parlez en à vos commerçants favoris. Merci ツ</div>
         </div>
       </h2>
