--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -2,7 +2,7 @@
   <div class="ui main container">
     {{#if isSellerOrOwnerRole}}
       <div class="ui raised center aligned segment">
-        <h3 class="ui header">Bienvenue sur votre allofid</h3>
+        <h3 class="ui header">Bienvenue sur votre loyali</h3>
         {{#if isMobile}}
         <button class="ui button fluid positive" data-action="scan">Scanner un code client</button>
         <br>
@@ -11,7 +11,7 @@
         <br>
         <a class="ui button fluid blue" href="{{pathFor 'myPlaces'}}">Gérez vos commerces</a>
         <br>
-        <a class="ui button fluid" href="{{pathFor 'contact'}}">Contacter allofid</a>
+        <a class="ui button fluid" href="{{pathFor 'contact'}}">Contacter loyali</a>
       </div>
     {{/if}}
     <form id="search">
@@ -35,7 +35,7 @@
       <h2 class="ui icon header">
         <i class="blue ticket icon" data-action="vouchers"  data-intro="Ce ticket est un raccourci vers vos avoirs" data-step="5" data-position="bottom-middle-aligned"></i>
         <div class="content">
-          Utilisez allofid pour votre commerce
+          Utilisez loyali pour votre commerce
           <div class="sub header">C'est gratuit pour toujours.</div>
         </div>
       </h2>
