--- a/client/templates/contacts/contacts_template.html
+++ b/client/templates/contacts/contacts_template.html
@@ -2,7 +2,7 @@
   {{#if isInRole 'allo'}}
     <div class="ui main container">
       <div class="ui basic segment">
-        <h3 class="ui header">Messagerie loyali</h3>
+        <h3 class="ui header">Messagerie Loyali</h3>
         <div class="ui middle aligned animated list">
           {{#each contacts}}
           <div class="item">
