--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -3,10 +3,10 @@
     <a href="{{pathFor 'addCard'}}" class="teal right floated ui circular icon button"><i class="add icon"></i></a>
     <h2>Mes cartes de fidélité</h2>
     <div class="ui top attached tabular menu" id="loyaltyTabs">
-      <a class="{{activeLoyaltyTab 'loyali'}} item loyaltyTabHead" data-tab="loyali">loyali</a>
-      <a class="{{activeLoyaltyTab 'private'}} right item loyaltyTabHead" data-tab="private">personnelles</a>
+      <a class="{{activeLoyaltyTab 'Loyali'}} item loyaltyTabHead" data-tab="Loyali">Loyali</a>
+      <a class="{{activeLoyaltyTab 'private'}} right item loyaltyTabHead" data-tab="private">Personnelles</a>
     </div>
-    <div class="ui bottom attached tab basic segment {{activeLoyaltyTab 'loyali'}}" data-tab="loyali">
+    <div class="ui bottom attached tab basic segment {{activeLoyaltyTab 'Loyali'}}" data-tab="Loyali">
       <div class="ui relaxed divided list">
         {{#each loyaltyCards}}
         <div class="item">
@@ -27,8 +27,8 @@
           <h2 class="ui icon header">
             <i class="yellow star icon"></i>
             <div class="content">
-              Vous n'avez pas encore de cartes de fidélité loyali
-              <div class="sub header">Cherchez l'affiche <strong>loyali</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
+              Vous n'avez pas encore de cartes de fidélité Loyali
+              <div class="sub header">Cherchez l'affiche <strong>Loyali</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
             </div>
           </h2>
         </div>
@@ -57,7 +57,7 @@
             <i class="yellow star icon"></i>
             <div class="content">
               Vous n'avez pas encore ajouté de cartes de fidélité personelles
-              <div class="sub header">loyali vous permet de dématerialiser vos cartes de fidélité en les scannant.</div>
+              <div class="sub header">Loyali vous permet de dématerialiser vos cartes de fidélité en les scannant.</div>
             </div>
             <p>
               <a href="{{pathFor 'addCard'}}" class="ui button">Ajouter une carte de fidélité</a>
