Grawls and mobile resources

--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -9,7 +9,7 @@
       <ul>
         <li>Gérer les cartes de fidélité de vos clients depuis votre smartphone</li>
         <li>Rendre la monnaie des tickets restaurant sous forme d’avoir</li>
-        <li>Proposer des promotions à vos clients</li>
+        <li>Proposer des promotions à vos clients (bientôt)</li>
       </ul>
       <h4 class="ui header">Pour les clients</h4>
       <ul>
@@ -18,13 +18,13 @@
         <li>Voir le montant de vos avoirs cumulés chez les commerçants partenaires</li>
       </ul>
       <h4 class="ui center aligned header">
-        Avec Loyali, fini le porte monnaie surchargé.
+        Avec Loyali, fini le porte monnaie surchargé inutilement.
       </h4>
 
     </div>
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
-        <i class="blue ticket icon"></i>
+        <img class="ui small image" src="{{loyaliLogo}}" alt="Loyali" />
         <div class="content">
           Cherchez les affiches <strong>Loyali</strong> autour de vous
           <div class="sub header">ou parlez en à vos commerçants favoris. Merci ツ</div>
