--- a/client/templates/search/search_template.html
+++ b/client/templates/search/search_template.html
@@ -16,10 +16,8 @@
           <div class="content">
             <div class="header">{{name}}</div>
             <div class="meta">
+              {{addresses.[0].street}}<br>
               {{addresses.[0].zip}} {{addresses.[0].city}}
-            </div>
-            <div class="description">
-              {{description}}
             </div>
           </div>
         </a>
