--- a/client/templates/vouchers/vouchers_template.html
+++ b/client/templates/vouchers/vouchers_template.html
@@ -3,7 +3,7 @@
     <h2>Mes avoirs</h2>
     <div class="ui relaxed divided list">
       {{#each vouchers}}
-      <div class="item">
+      <div class="item voucher">
         {{#if imageId}}
           {{> image imageId=imageId classNames='mini rounded'}}
         {{else}}
