--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -19,6 +19,12 @@
         </h2>
         {{#if place.loyaltyCard.enabled}}
           <h4>Carte de fidélité{{#if customerEmail}} de {{customerEmail}}{{/if}}</h4>
+          <button class="teal right floated ui circular icon button" id="loyaltyCardHelp" data-position="top right"><i class="help icon"></i></button>
+          <div class="ui special popup">
+            Chaque tranche d'achat de {{{formatMoney place.loyaltyCard.pointCost}}} ajoute 1 point à la carte de fidélité.
+            <br><br>
+            Quand la carte atteint {{place.loyaltyCard.size}} points, un avoir de {{{formatMoney place.loyaltyCard.voucherValue}}} est envoyé et le compte de points est remis a zéro.
+          </div>
           <div class="ui left labeled button" tabindex="2">
             <a class="ui basic label" data-action="loyaltyCardHistory">
               <i class="yellow star icon"></i> {{userPoints}} / {{place.loyaltyCard.size}} points
@@ -37,9 +43,7 @@
             <i class="history icon"></i> Mise à jour {{fromNow loyaltyCardDate}}<br>
           </p>
           {{/if}}
-          <p style="text-align: justify;text-justify: inter-word;">
-            Chaque tranche d'achat de {{{formatMoney place.loyaltyCard.pointCost}}} ajoute 1 point à la carte de fidélité. Quand la carte atteint {{place.loyaltyCard.size}} points, un avoir de {{{formatMoney place.loyaltyCard.voucherValue}}} est envoyé et le compte de points est remis a zéro.
-          </p>
+          <hr>
         {{/if}}
         <h4>Avoir{{#if customerEmail}} de {{customerEmail}}{{/if}}</h4>
           <div class="ui list">
