--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -14,6 +14,12 @@
         <a class="ui button fluid" href="{{pathFor 'contact'}}">Contacter Loyali</a>
       </div>
     {{/if}}
+    {{#unless isMobile}}
+      <div class="ui raised center aligned segment">
+        <h4>Disponnible sur <a href="https://play.google.com/store/apps/details?id=loya.ly.app" target="_blank"><i class="play icon"></i>Google Play</a></h4>
+         <!-- et <a class="ui disabled link"><i class="apple icon"></i>App Store</a> -->
+      </div>
+    {{/unless}}
     <form id="search">
       <div class="ui large fluid icon input">
         <input type="text" placeholder="Commerce, ville, cp" id="searchQuery">
