--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -16,7 +16,7 @@
     {{/if}}
     {{#unless isMobile}}
       <div class="ui raised center aligned segment">
-        <h4>Disponnible sur <a href="https://play.google.com/store/apps/details?id=loya.ly.app" target="_blank"><i class="play icon"></i>Google Play</a></h4>
+        <h4>Disponible sur <a href="https://play.google.com/store/apps/details?id=loya.ly.app" target="_blank"><i class="play icon"></i>Google Play</a></h4>
          <!-- et <a class="ui disabled link"><i class="apple icon"></i>App Store</a> -->
       </div>
     {{/unless}}
