--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -31,6 +31,8 @@
         </div>
       </h2>
       <a class="ui button fluid" href="{{pathFor 'contact'}}">Contact</a>
+      <br>
+      <a class="ui button fluid" href="{{pathFor 'termOfUse'}}">Codition d'utilisation</a>
     </div>
   </div>
 </template>
