--- a/client/templates/profile/profile_template.html
+++ b/client/templates/profile/profile_template.html
@@ -22,13 +22,13 @@
         Changer de mot de passe
       </a>
       <br>
-      <button class="ui fluid red button" data-action="logout">
+      <button class="ui fluid orange button" data-action="logout">
         Se déconnecter
       </button>
-      <!-- <br>
+      <br>
       <button class="ui fluid red button" data-action="deleteMe">
         Supprimer son compte
-      </button> -->
+      </button>
     </div>
   </div>
 </template>
