deleting users properly

--- a/client/templates/editProfile/editProfile_template.html
+++ b/client/templates/editProfile/editProfile_template.html
@@ -18,6 +18,11 @@
         <button class="fluid ui positive button" type="submit">Enregistrer</button>
         <br>
         <a class="fluid ui button" href="{{pathFor 'profile'}}">Annuler</a>
+        <br>
+        <hr>
+        <button class="ui fluid red button" data-action="deleteMe">
+          Supprimer ce compte
+        </button>
       </form>
     </div>
   </div>
