--- a/client/templates/editCard/editCard_template.html
+++ b/client/templates/editCard/editCard_template.html
@@ -14,7 +14,9 @@
       {{> afQuickField placeholder="schemaLabel" name="code" }}
       {{> afQuickField placeholder="schemaLabel" name="format" }}
       {{> afQuickField placeholder="schemaLabel" name="points"}}
-      {{> afQuickField placeholder="schemaLabel" name="notes"}}
+      {{> afQuickField placeholder="schemaLabel" name="notes" id="cardNotes"}}
+      {{> afQuickField  name="imageId" class="hidden" id="imageId"}}
+      {{> afQuickField  name="cardBrandId" class="hidden" id="cardBrandId"}}
       <button class="fluid ui positive button" type="submit">Enregistrer</button>
       <br>
       <a class="fluid ui button" href="{{pathFor 'loyaltyCards'}}">Annuler</a>
