better role mgmt

--- a/client/templates/cardBrand/cardBrand_template.html
+++ b/client/templates/cardBrand/cardBrand_template.html
@@ -1,5 +1,5 @@
 <template name='cardBrand'>
-  {{#if isInRole 'allo'}}
+  {{#if isInRole 'bo'}}
     <div class="ui main container">
       <div class="ui basic segment">
         {{#if cardBrand.imageId}}
