--- a/client/templates/cardsBrands/cardsBrands_template.html
+++ b/client/templates/cardsBrands/cardsBrands_template.html
@@ -1,5 +1,5 @@
 <template name='cardsBrands'>
-  {{#if isInRole 'allo'}}
+  {{#if isInRole 'bo'}}
     <div class="ui main container">
       <div class="ui basic segment">
         <a href="{{pathFor 'cardBrand'}}" class="green right floated ui circular icon button"><i class=" plus icon"></i></a>
