--- a/client/templates/contacts/contacts_template.html
+++ b/client/templates/contacts/contacts_template.html
@@ -1,5 +1,5 @@
 <template name='contacts'>
-  {{#if isInRole 'allo'}}
+  {{#if isInRole 'bo'}}
     <div class="ui main container">
       <div class="ui basic segment">
         <h3 class="ui header">Messagerie Loyali</h3>
