--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -40,10 +40,10 @@
     {{#unless isInRole 'owners'}}
     <div class="ui raised center aligned segment">
       <h2 class="ui icon header">
-        <i class="blue ticket icon" data-action="vouchers"  data-intro="Ce ticket est un raccourci vers vos avoirs" data-step="5" data-position="bottom-middle-aligned"></i>
+        <img class="ui tiny image" src="{{loyaliLogo}}" alt="Loyali" data-intro="Ce ticket est un raccourci vers vos avoirs" data-step="5" data-position="bottom-middle-aligned" data-action="vouchers" />
         <div class="content">
           Utilisez Loyali pour votre commerce
-          <div class="sub header">C'est gratuit pour toujours.</div>
+          <div class="sub header">C'est gratuit pour toujours  et garanti sans pub.</div>
         </div>
       </h2>
       <p>
