term of use typo

--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -32,7 +32,7 @@
       </h2>
       <a class="ui button fluid" href="{{pathFor 'contact'}}">Contact</a>
       <br>
-      <a class="ui button fluid" href="{{pathFor 'termOfUse'}}">Codition d'utilisation</a>
+      <a class="ui button fluid" href="{{pathFor 'termOfUse'}}">Conditions générales d'utilisation</a>
     </div>
   </div>
 </template>
