--- a/client/templates/termOfUse/termOfUse_template.html
+++ b/client/templates/termOfUse/termOfUse_template.html
@@ -1,12 +1,12 @@
 <template name='termOfUse'>
   <div class="ui main container">
     <div class="ui basic segment">
-      <p><b>Conditions générales d'utilisation du site internet loya.li et l’application Loyali</b></p>
+      <p><b>Conditions générales d'utilisation du site internet loya.li de Loyali</b></p>
 
       <p>Le présent document a pour
       objet de définir les modalités et conditions dans lesquelles d’une part,
       loya.li, ci-après dénommé LOYALI, met à la disposition de ses utilisateurs le
-      site, l’application, et les services disponibles sur le site et l’application et
+      site, l’application, et les services disponibles sur le site de et
       d’autre part, la manière par laquelle l’utilisateur accède au site et à l’application
       et utilise ses services. </p>
 
@@ -19,10 +19,10 @@
       <p><b>Propriété intellectuelle</b></p>
 
       <p>La structure générale du site
-      et l’application loya.li, ainsi que les textes, graphiques, images, sons et vidéos
+      de loya.li, ainsi que les textes, graphiques, images, sons et vidéos
       la composant, sont la propriété de l'éditeur ou de ses partenaires. Toute
       représentation et/ou reproduction et/ou exploitation partielle ou totale des
-      contenus et services proposés par le site et l’application loya.li, par quelque
+      contenus et services proposés par le site et par l’application loya.li, par quelque
       procédé que ce soit, sans l'autorisation préalable et par écrit de loya.li
       et/ou de ses partenaires est strictement interdite et serait susceptible de
       constituer une contrefaçon au sens des articles L 335-2 et suivants du Code de
@@ -35,7 +35,7 @@
 
       <p><b>Liens hypertextes</b></p>
 
-      <p>Le site et l’application loya.li
+      <p>Le site loya.li et l’application Loyali
       peut contenir des liens hypertextes vers d’autres sites présents sur le réseau
       Internet. Les liens vers ces autres ressources vous font quitter le site et
       l’application loya.li </p>
@@ -52,7 +52,7 @@
       <p><b>Responsabilité de l’éditeur</b></p>
 
       <p>Les informations et/ou
-      documents figurant sur ce site et l’application et/ou accessibles par ce site
+      documents figurant sur ce site et sur l’application et/ou accessibles par ce site
       et l’application proviennent de sources considérées comme étant fiables.</p>
 
       <p>Toutefois, ces informations
@@ -87,13 +87,13 @@
       au site et à l’application</b></p>
 
       <p>L’éditeur s’efforce de
-      permettre l’accès au site et l’application 24 heures sur 24, 7 jours sur 7,
+      permettre l’accès au site et à l’application 24 heures sur 24, 7 jours sur 7,
       sauf en cas de force majeure ou d’un événement hors du contrôle de LOYALI, et
       sous réserve des éventuelles pannes et interventions de maintenance nécessaires
-      au bon fonctionnement du site et l’application et des services.</p>
+      au bon fonctionnement du site et de l’application et des services.</p>
 
       <p>Par conséquent, LOYALI ne
-      peut garantir une disponibilité du site et l’application et/ou des services,
+      peut garantir une disponibilité du site et de l’application et/ou des services,
       une fiabilité des transmissions et des performances en terme de temps de
       réponse ou de qualité. Il n’est prévu aucune assistance technique vis à vis de
       l’utilisateur que ce soit par des moyens électronique ou téléphonique.</p>
