--- a/client/templates/histories/histories_template.html
+++ b/client/templates/histories/histories_template.html
@@ -1,8 +1,8 @@
 <template name='histories'>
-  <div class="ui fullscreen modal histories-modal">
-    <div class="actions">
+  <div class="ui modal histories-modal">
+    <i class="close icon"></i>
+    <div class="header">
       <i class="grey history icon"></i>{{placeName}}
-      <div class="ui small basic green approve icon button"><i class="close icon"></i></div>
     </div>
     <div class="content">
       <div class="ui feed">
