--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -45,6 +45,7 @@
           {{/if}}
           <hr>
         {{/if}}
+        <a class="teal right floated ui circular icon button" href="{{pathFor 'calc'}}"><i class="calculator icon"></i></a>
         <h4>Avoir{{#if customerEmail}} de {{customerEmail}}{{/if}}</h4>
           <div class="ui list">
             <div class="item" id="useVoucher" data-action="voucherHistory">
