--- a/client/templates/_comons/notFound/notFound_template.html
+++ b/client/templates/_comons/notFound/notFound_template.html
@@ -1,6 +1,7 @@
 <template name='notFound'>
   <div class="ui fluid center aligned basic fitted segment">
-    <h3>404 - Houston, we have a problem!!!</h3>
+    <h3>404 - Houston, we have a problem !</h3>
     <h5>The page you're looking for was not found.</h5>
+    <p>{{originalUrl}}</p>
   </div>
 </template>
