--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -16,8 +16,7 @@
     {{/if}}
     {{#unless isMobile}}
       <div class="ui raised center aligned segment">
-        <h4>Disponible sur <a href="https://play.google.com/store/apps/details?id=loya.ly.app" target="_blank"><i class="play icon"></i>Google Play</a></h4>
-         <!-- et <a class="ui disabled link"><i class="apple icon"></i>App Store</a> -->
+        <h4>Disponible sur <a class="ui link" href="https://itunes.apple.com/fr/app/loyali/id1073418073?l=en&mt=8" target="_blank"><i class="apple icon"></i>App Store</a> et <a href="https://play.google.com/store/apps/details?id=loya.ly.app"><i class="play icon"></i>Google Play</a></h4>
       </div>
     {{/unless}}
     <form id="search">
