--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -1,23 +1,27 @@
 <template name='header'>
   <div class="ui top fixed menu borderless blue inverted">
-    <div class="left item" data-action="sidebar">
-      <i class="big sidebar icon" data-intro="Cliquez ici pour voir le menu et toutes les fonctionalités de Loyali" data-step="1"></i>
+    <div class="left menu">
+      <div class="item" data-action="sidebar">
+        <i class="big sidebar icon" data-intro="Cliquez ici pour voir le menu et toutes les fonctionalités de Loyali" data-step="1"></i>
+      </div>
     </div>
     <div class="center header item" data-action="goHome">
       <h1 data-intro="Où que vous soyez, vous pouvez cliquer sur Loyali pour revenir à l'accueil" data-step="2" data-position="bottom-middle-aligned">Loyali</h1>
     </div>
-    {{#unless isConnected}}
-    <div class="right item" data-action="signIn" data-intro="Cliquez là pour afficher votre profil et vous faire scanner par les commerçants qui utilisent Loyali" data-step="3" data-position="bottom-right-aligned">
-      <i class="big user icon"></i>
-    </div>
-    {{else}}
-    <div class="right item" data-action="profile" data-intro="Cliquez là pour afficher votre profil et vous faire scanner par les commerçants qui utilisent Loyali" data-step="3" data-position="bottom-right-aligned">
-      {{#if currentUser.profile.imageId}}
-        {{> image imageId=currentUser.profile.imageId classNames='avatar'}}
-      {{else}}
+    <div class="right menu">
+      {{#unless isConnected}}
+      <div class="item" data-action="signIn" data-intro="Cliquez là pour afficher votre profil et vous faire scanner par les commerçants qui utilisent Loyali" data-step="3" data-position="bottom-right-aligned">
         <i class="big user icon"></i>
-      {{/if}}
+      </div>
+      {{else}}
+      <div class="item" data-action="profile" data-intro="Cliquez là pour afficher votre profil et vous faire scanner par les commerçants qui utilisent Loyali" data-step="3" data-position="bottom-right-aligned">
+        {{#if currentUser.profile.imageId}}
+          {{> image imageId=currentUser.profile.imageId classNames='avatar'}}
+        {{else}}
+          <i class="big user icon"></i>
+        {{/if}}
+      </div>
+      {{/unless}}
     </div>
-    {{/unless}}
   </div>
 </template>
