--- a/client/templates/calc/calc_template.html
+++ b/client/templates/calc/calc_template.html
@@ -1,43 +1,84 @@
 <template name='calc'>
   <div class="ui main container">
-    <div class="ui basic segment">
-      <div class="ui grid">
-        <div class="four wide column"><button type="button" id="cancel" class="ui fluid negative button big">C</button></div>
-        <div class="twelve wide column">
-          <h1 class="ui right aligned header">{{calcResult}}</h1>
-          <input type="hidden" id="calcScreen" value="">
+
+      <div class="ui top attached tabular menu" id="calcTabs">
+        <a class="active item calcTabHead" data-tab="calc"><i class="large teal calculator icon"></i></a>
+        <a class="right item calcTabHead" data-tab="ticket"><i class="large blue ticket icon"></i></a>
+      </div>
+      <div class="ui bottom attached tab segment active" data-tab="calc">
+        <div class="ui grid">
+          <div class="four wide column"><button type="button" id="cancel" class="ui fluid negative button large">C</button></div>
+          <div class="twelve wide column">
+            <h1 class="ui right aligned header">{{calcResult}}</h1>
+            <input type="hidden" id="calcScreen" value="">
+          </div>
+          <div class="four column row">
+            <div class="column"><button type="button" id="seven" class="ui fluid button big calcKey" data-value="7">7</button></div>
+            <div class="column"><button type="button" id="heigh" class="ui fluid button big calcKey" data-value="8">8</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="9">9</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big basic black calcKey" data-value="/">÷</button></div>
+          </div>
+          <div class="four column row">
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="4">4</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="5">5</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="6">6</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big basic black calcKey" data-value="*"><i class="remove icon"></i></button></div>
+          </div>
+          <div class="four column row">
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="1">1</button></div>
+            <div class="column"><button type="button" id="two" class="ui fluid button big calcKey" data-value="2">2</button></div>
+            <div class="column"><button type="button" id="three" class="ui fluid button big calcKey" data-value="3">3</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big basic black calcKey" data-value="-"><i class="minus icon"></i></button></div>
+          </div>
+          <div class="four column row">
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="0">0</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="00">00</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value=".">.</button></div>
+            <div class="column"><button type="button" id="one" class="ui fluid button big basic blue calcKey" data-value="+"><i class="plus icon"></i></button></div>
+          </div>
         </div>
-        <div class="four column row">
-          <div class="column"><button type="button" id="seven" class="ui fluid button big calcKey" data-value="7">7</button></div>
-          <div class="column"><button type="button" id="heigh" class="ui fluid button big calcKey" data-value="8">8</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="9">9</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big basic black calcKey" data-value="/">÷</button></div>
-        </div>
-        <div class="four column row">
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="4">4</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="5">5</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="6">6</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big basic black calcKey" data-value="*"><i class="remove icon"></i></button></div>
-        </div>
-        <div class="four column row">
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="1">1</button></div>
-          <div class="column"><button type="button" id="two" class="ui fluid button big calcKey" data-value="2">2</button></div>
-          <div class="column"><button type="button" id="three" class="ui fluid button big calcKey" data-value="3">3</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big basic black calcKey" data-value="-"><i class="minus icon"></i></button></div>
-        </div>
-        <div class="four column row">
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="0">0</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value="00">00</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big calcKey" data-value=".">.</button></div>
-          <div class="column"><button type="button" id="one" class="ui fluid button big basic blue calcKey" data-value="+"><i class="plus icon"></i></button></div>
+        <br>
+        <button type="button" id="equal" class="ui black fluid button large">=</button>
+      </div>
+      <div class="ui bottom attached tab basic segment" data-tab="ticket">
+        <h3 class="ui header">Calculer le montant d'un avoir</h3>
+        <div class="ui form">
+          <div class="three fields">
+            <div class="field">
+              <label for="total">Total a payer</label>
+              <div class="ui right labeled left icon large input">
+                <i class="calculator icon"></i>
+                <input type="number" step="any" placeholder="Total a payer" id="total">
+                <div class="ui label"><i class="euro icon"></i></div>
+              </div>
+            </div>
+            <div class="field">
+              <label for="ticketValue">Valeur du ticket</label>
+              <div class="ui right labeled left icon large input">
+                <i class="ticket icon"></i>
+                <input type="number" step="any" placeholder="Valeur du ticket" id="ticketValue">
+                <div class="ui label"><i class="euro icon"></i></div>
+              </div>
+            </div>
+            <div class="field">
+              <label for="ticketCount">Nombre de tickets</label>
+              <select class="ui dropdown" id="ticketCount" name="ticketCount">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+              </select>
+            </div>
+          </div>
+          <h2 class="ui right aligned header">Avoir : {{{formatMoney voucher}}}</h2>
+          <button class="fluid ui button calcVoucher">recalculer</button>
         </div>
       </div>
-      <br>
-      <button type="button" id="equal" class="ui black fluid button big">=</button>
       {{#if isSellerOrOwnerRole}}
-      <br>
-      <button type="button" id="toVoucher" class="ui positive fluid button big">Vers avoir</button>
+      <button type="button" id="toVoucher" class="ui positive fluid button large">Vers avoir</button>
       {{/if}}
-    </div>
+
   </div>
 </template>
